
                  for /l %%A in (0 1 10) do for /l %%B in (0 1 10) do (
                     echo %%A %%B
                  )

             - Cleaned up zombies processes that were not wiped from kernels 
               buffer since Dos9 never explicitely specified to throw the data 
               out. Basically, this behaviour is particularly shown when 
               reapeating for loops. eg:

                  :loop
                  for /f "delims=: tokens=1,2,3" %%A in ('echo 
                this:is:a_test') do (
                      echo %%A %%B %%C
                  )
                  goto :loop

        - Changed Dos9 behaviour when getting a SIGINT on Linux. Depending on 
          whether a user input or a script is being executed, the intrepretor 
          choose to cancel the command or to exit.

MONDAY 5TH, DECEMBER

        - Fixed a bug with FIND command, the case senstive and insensitive 
          features were swapped

WEDNESDAY 7TH, DECEMBER

        - Correct some words in French (fr_FR) manual.

MONDAY 30TH, JUNUARY 2017

        - Fixed littles errors with SET and /a:i switches.

        - Fixed delimeters errors for parsing input and conditional operators. 

        - Fixed errors with gotos, basically omit spaces before labels.

WEDNESDAY 8TH, JUNUARY 2017

        - Fixed some bugs with the move command.

THURSDAY 9TH, JUNUARY 2017

        - Fixed a major bug of the IF command. Before that, it had fuzzy 
          behaviour with blocks that were part of a later command. Indeed, 
          when combined with a command that required a block but which was not 
          enclosed in a block, the line was poorly handled, eg:

             if a==a if b==b (
             echo test
             )

          This exemple (and its derivates) should now behave the way it is 
          intended to, that is, as if it was specified as :

             if a==a (if b==b (
             echo test
             ))
