@@ -1463,9 +1463,10 @@ ${if a==a (if b==b (
 echo test
 ))}
 
-{{Saturday 11th, February}}
+{{Saturday 12th, February}}
 
 	- Fixed minor bugs with the {START} command.
 	
 	- Fixed many manual pages.
 
+    - Fixed if dos9 extention bug.
